<resources>
    <string name="app_name">Soul Fit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Soul Fit</string>
    <string name="nav_header_subtitle">Healthy body, healthy mind, happy self</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="fitness_tips">Fitness Tips</string>
    <string name="tips_description">Click the images below to read fitness tips</string>
    <string name="menu_add">Add a workout</string>
    <string name="menu_journal">Journal</string>
    <string name="workout_name">Workout Name:</string>
    <string name="submit">submit</string>
    <string name="name_of_workout">name of workout</string>
    <string name="workout_type">Workout Type:</string>
    <string name="date">Date:</string>
    <string name="enter_date_of_workout">mm/dd/yy</string>
    <string name="duration">Duration:</string>
    <string name="time">Time:</string>
    <string name="distance">Distance:</string>
    <string name="enter_time_of_workout">hh:mm</string>
    <string name="enter_workout_duration">duration (mins)</string>
    <string name="enter_distance_km">distance (km)</string>
    <string name="required">required</string>
    <string name="intensity">Intensity</string>
    <string name="workout_intensity">workout intensity</string>
    <string name="_1">1.</string>
    <string name="morning_hike">Morning Hike</string>
    <string name="hiking">Hiking</string>
    <string name="_60_mins">60 mins</string>
    <string name="_5_km">5 km</string>
    <string name="sun_oct_13_2020">Sun, Oct 13, 2020</string>
    <string name="workout_journal">Workout Journal</string>
    <string name="count">%1$d.</string>
    <string name="_8_00am">8:00AM</string>
    <string name="Biking">Biking</string>
    <string name="Swimming">Swimming</string>
    <string name="biking_journal">Biking Journal</string>
    <string name="swimming_journal">Swimming Journal</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="add_a_workout">Add a Workout</string>
    <string name="workout_journals">Workout Journals</string>
    <string name="workout_added">Workout Added:</string>
    <string name="sunday_hike">Sunday Hike</string>
    <string name="add_a_hiking_workout">Add a Hiking Workout</string>
    <string name="hiking_journal">Hiking Journal</string>
    <string name="about">About</string>
    <string name="author">Christina Zammit, Sheridan College, 2020</string>
    <string name="delete">Delete</string>

</resources>