<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/workoutAdded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/workout_added"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/workoutNameOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/sunday_hike"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/workoutTypeOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/hiking"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/workoutDateOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/sun_oct_13_2020"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/workoutTimeOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/_8_00am"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/workoutDurationOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/_60_mins"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/workoutDistanceOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/_5_km"
            android:textSize="18sp" />

        <Button
            android:id="@+id/okayBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="Okay" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>