<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="sheridan.zammichr.prog_practice.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/add_hiking_fragment"
        android:name="sheridan.zammichr.prog_practice.ui.input.AddHikingFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/add_hiking_fragment" >
        <action
            android:id="@+id/action_input_to_output"
            app:destination="@id/outputFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="sheridan.zammichr.prog_practice.ui.journal.JournalHikingFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/outputFragment"
        android:name="sheridan.zammichr.prog_practice.ui.output.OutputFragment"
        android:label="OutputFragment">
        <argument
            android:name="hikingId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/journalHikingFragment"
        android:name="sheridan.zammichr.prog_practice.ui.journal1.JournalHikingFragment"
        android:label="JournalHikingFragment" >
        <action
            android:id="@+id/action_journal_to_output"
            app:destination="@id/outputFragment" />
    </fragment>
</navigation>